# advent-of-code

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  aoc.code-workspace  requirements.txt  setup.cfg  workspace.code-workspace
python/: .envrc  new_puzzle.py  pyproject.toml  requirements.txt  test_utils.py  utils.py
python/2020/: q03.py  q06.py  q07.py  q09.py  q10.py  q12.py  q17.py  q18.py  q19.py
python/2021/: q01.py  q02.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q18.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
python/2022/: q01.py  q01_alt.py  q02.py  q02_alt.py  q03.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q18.py  q20.py  q21.py  q22.py  q23.py  q24.py
python/2023/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q23.py  q25.py
python/2024/: q01.py
python/_2019/: intcode.py  q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  test_intcode.py
python/_2020/: q01.py  q04.py  q09.py  q14.py  q15.py
python/_2021/: q01.py  q02.py  q03.py  q04.py  q08.py  q15.py  q17.py  q19.py  q20.py  q21.py  q24.py  q24c.pyx
python/_2022/: q01.py  q01_alt.py  q02.py  q02_alt.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q19_2.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
python/_2023/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
python/_2024/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
python/_2025/: q01.py  q02.py  q03.py  q04.py  (+8 more)
(+43 files in other folders)
