[project]
name = "advent-of-code"
version = "2024.0.0"
description = "Jarshwah does Advent Of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "browser-cookie3>=0.19.1",
    "click>=8.1.7",
    "cython>=3.0.11",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "more-itertools>=10.5.0",
    "mypy==1.14.1",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "parse>=1.20.2",
    "pre-commit>=4.0.1",
    "pyparsing>=3.2.0",
    "pytest>=8.3.3",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "rich-click>=1.8.4",
    "rich>=13.9.4",
    "ruff>=0.8.0",
    "shapely>=2.0.6",
    "types-networkx>=3.4.2.20241115",
    "z3-solver>=4.13.3.0",
]

[tool.pyright]
pythonVersion = "3.13"
include = ["src"]
exclude = [
    "**/node_modules",
    "**/static-src",
    "**/__pycache__",
]

[tool.mypy]
python_version = "3.13"
strict = true
follow_untyped_imports = true
ignore_missing_imports = true
explicit_package_bases = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = [
    "_2019/utils",
    "_2020",
    "_2021",
    "_2022",
    "_2023",
    "test_utils",
    "test_intcode",
    "_2024/utils"
]

[[tool.mypy.overrides]]
module = ["parse.*"]
follow_untyped_imports = false

[[tool.mypy.overrides]]
module = ["z3.*"]
follow_untyped_imports = false


[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    ".DS_Store",
    ".pytest_cache",
    "__pycache__",
]

[tool.ruff.lint]
ignore = [
    "E701"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # `foo` imported but unused
]

[tool.ruff.lint.isort]
known-third-party = [
    "aocd",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
